<resources>
    <string name="app_name">seller-lounge</string>
    <string name="home">홈</string>
    <string name="login">Login</string>
    <string name="auth_fail">로그인을 할 수 없습니다. 계정 확인을 부탁드립니다.</string>
    <string name="login_fail">로그인을 할 수 없습니다. 잠시 후 다시 시도해주시기 바랍니다.</string>
    <string name="seller">Seller</string>
    <string name="lounge">lounge</string>
    <string name="product_search">쇼핑검색</string>
    <string name="trend_comparison">트랜드 비교</string>
    <string name="setting">설정</string>
    <string name="sort_by">정렬 기준(기본: 정확도순)</string>
    <string name="comparison_trend">트랜드 비교</string>
    <string name="enter_shopping_keyword">쇼핑 키워드 입력</string>
    <string name="search_helper_text">비교할 키워드 추가시 [,]를 이용해주세요 (최대 5개)</string>
    <string name="announce_blank_keyword">비교할 키워드를 입력해주세요</string>
    <string name="announce_blank_category">카테고리를 선택해주세요</string>
    <string name="keyword_count_over">비교할 키워드는 최대 5개 까지만 입력해주세요.</string>
    <string name="error_api_network">네트워크 오류가 발생했습니다. 인터넷 연결상태를 확인 부탁드립니다.</string>
    <string name="error_api_http_response">요청값이 올바르지 않습니다. 관리자에게 문의 부탁드립니다.</string>
    <string name="chart_result">비교값 그래프</string>
    <string name="date">date</string>
    <string name="category">카테고리</string>
    <string name="search">검색</string>
    <string name="post">글쓰기</string>
    <string name="announce_input_title">제목을 입력해주세요</string>
    <string name="announce_input_body">내용을 입력해주세요</string>
    <string name="attachment_photo">사진첨부</string>
    <string name="attachment_document">문서첨부</string>
    <string name="announce_image_attachment_limit">이미지는 최대 10개 까지 첨부 가능합니다.</string>
    <string name="announce_document_attachment_limit">문서는 2개까지 첨부 가능합니다.</string>
    <string name="announce_blank_body">내용을 입력해주세요.</string>
    <string name="seller_forum">셀러 게시판</string>
    <string name="completed">작성 완료</string>
    <string name="message_wait">잠시만 기다려주세요</string>
    <string name="error_user_info_update">회원 정보를 갱신할 수 없습니다. 관리자에게 문의 부탁드립니다.</string>
    <string name="error_writer_info_load">"작성자 정보 로드 오류입니다. 관리자에게 문의 부탁드립니다."</string>
    <string name="offline_mode">현재 오프라인 모드 입니다. 게시물 검색 및 게시물 작성자 확인 등 일부 기능이 제한됩니다.</string>
    <string name="nickname">닉네임</string>
    <string name="email">이메일</string>
    <string name="customer_feedback">고객의견</string>
    <string name="recently_viewed_post">최근 열람 게시물</string>
    <string name="logout">로그아웃</string>
    <string name="loading">로딩</string>
    <string name="document_download">문서 다운로드</string>
    <string name="announce_document_download">문서 다운로드가 진행됩니다. 진행 하시겠습니까?</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="auto_search_title">게시물 자동완성 검색</string>
    <string name="logout_message">로그아웃 하시겠습니까?</string>
    <string name="announce_download_start">파일 다운로드를 진행합니다</string>
    <string name="permission_allow">저장소 접근권한 허용 완료. 다운로드를 다시 진행해주세요.</string>
    <string name="permission_deny">저장소 접근권한이 허용되지 않았습니다. 다운로드를 실행할 수 없습니다.</string>
    <string name="announce_input_text">검색할 키워드를 입력해주세요.</string>
    <string name="announce_duplicate_file">중복된 첨부파일 입니다.</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>
    <string name="post_detail">게시물 상세화면</string>
    <string name="delete_post">게시물 삭제</string>
    <string name="announce_delete_post">게시물을 삭제하시겠습니까?</string>
    <string name="edit_post">게시물 수정</string>
    <string name="notification_channel_name_document_download">문서 다운로드 알림</string>
    <string name="document_download_channel_description">문서 다운로드와 관련된 알림을 받습니다.</string>
    <string name="notification_document_download_title">문서 다운로드 완료</string>
    <string name="notification_document_download_ticker">문서 다운로드 완료</string>
    <string name="notification_document_download_content">문서 다운로드가 완료되었습니다.</string>
    <string name="download_permission_admit">다운로드 알림 허용 완료</string>
    <string name="download_permission_deny">"다운로드 알림 거절. \n다운로드는 정상 진행됩니다"</string>

    <string-array name="sort_select">
        <item>정확도순</item>
        <item>낮은 가격순</item>
        <item>높은 가격순</item>
    </string-array>
</resources>