<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/dest_home">

    <fragment
        android:id="@+id/dest_login"
        android:name="com.wasingun.seller_lounge.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_dest_login_to_dest_home"
            app:destination="@id/dest_home"
            app:popUpTo="@id/dest_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dest_home"
        android:name="com.wasingun.seller_lounge.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_dest_home_to_dest_login"
            app:destination="@id/dest_login"
            app:popUpTo="@id/dest_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_dest_home_to_post_upload_fragment"
            app:destination="@id/dest_post_upload" />
        <action
            android:id="@+id/action_dest_home_to_post_detail_fragment"
            app:destination="@id/dest_post_detail" />

    </fragment>

    <fragment
        android:id="@+id/dest_product_search"
        android:name="com.wasingun.seller_lounge.ui.productsearch.ProductSearchFragment"
        android:label="@string/product_search"
        tools:layout="@layout/fragment_product_search"/>

    <fragment
        android:id="@+id/dest_trend_comparison"
        android:name="com.wasingun.seller_lounge.ui.trendcomparison.TrendComparisonFragment"
        android:label="@string/trend_comparison"
        tools:layout="@layout/fragment_trend_comparison">
        <action
            android:id="@+id/action_dest_trend_comparison_to_dest_trend_comparison_result"
            app:destination="@id/dest_trend_comparison_result" />
    </fragment>

    <fragment
        android:id="@+id/dest_setting"
        android:name="com.wasingun.seller_lounge.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_dest_setting_to_dest_recently_viewed_post"
            app:destination="@id/dest_recently_viewed_post" />
        <action
            android:id="@+id/action_dest_setting_to_dest_login"
            app:destination="@id/dest_login"
            app:popUpTo="@id/dest_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/dest_trend_comparison_result"
        android:name="com.wasingun.seller_lounge.ui.trendcomparison.TrendComparisonResultFragment"
        android:label="@string/chart_result"
        tools:layout="@layout/fragment_trend_comparison_result">
        <argument
            android:name="keyword_response"
            app:argType="com.wasingun.seller_lounge.data.model.trendcomparison.KeywordResponse" />
    </fragment>

    <fragment
        android:id="@+id/dest_post_upload"
        android:name="com.wasingun.seller_lounge.ui.postupload.PostUploadFragment"
        android:label="@string/post"
        tools:layout="@layout/fragment_post_upload">
        <action
            android:id="@+id/action_dest_post_upload_to_dest_loading_dialog"
            app:destination="@id/dest_loading_dialog" />
        <action
            android:id="@+id/action_dest_post_upload_to_dest_home"
            app:destination="@id/dest_home"
            app:popUpTo="@id/dest_home"
            app:popUpToInclusive="true"/>
    </fragment>

    <dialog
        android:id="@+id/dest_loading_dialog"
        android:name="com.wasingun.seller_lounge.ui.common.LoadingDialogFragment"
        android:label="@string/loading"
        tools:layout="@layout/dialog_fragment_loading"/>

    <fragment
        android:id="@+id/dest_post_detail"
        android:name="com.wasingun.seller_lounge.ui.postdetail.PostDetailFragment"
        android:label="@string/post_detail"
        tools:layout="@layout/fragment_post_detail">
        <argument
            android:name="post"
            app:argType="com.wasingun.seller_lounge.data.model.post.PostInfo" />
        <action
            android:id="@+id/action_dest_post_detail_to_dest_loading_dialog"
            app:destination="@id/dest_loading_dialog" />
        <action
            android:id="@+id/action_dest_post_detail_to_dest_home"
            app:destination="@id/dest_home"
            app:popUpTo="@id/dest_home"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_dest_post_detail_to_dest_edit_post"
            app:destination="@id/dest_edit_post" />

    </fragment>

    <fragment
        android:id="@+id/dest_recently_viewed_post"
        android:name="com.wasingun.seller_lounge.ui.setting.RecentlyViewedPostFragment"
        android:label="@string/recently_viewed_post"
        tools:layout="@layout/fragment_recently_viewed_post">
        <action
            android:id="@+id/action_dest_recently_viewed_post_to_dest_post_detail"
            app:destination="@id/dest_post_detail" />
    </fragment>

    <fragment
        android:id="@+id/dest_edit_post"
        android:name="com.wasingun.seller_lounge.ui.editpost.EditPostFragment"
        android:label="@string/edit_post"
        tools:layout="@layout/fragment_edit_post">
        <argument
            android:name="post"
            app:argType="com.wasingun.seller_lounge.data.model.post.PostInfo" />
        <action
            android:id="@+id/action_dest_edit_post_to_dest_loading_dialog"
            app:destination="@id/dest_loading_dialog" />
        <action
            android:id="@+id/action_dest_edit_post_to_dest_home"
            app:destination="@id/dest_home"
            app:popUpTo="@id/dest_home"
            app:popUpToInclusive="true"/>

    </fragment>

</navigation>