<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="firebaseUser"
            type="com.google.firebase.auth.FirebaseUser" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextHeadLine"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/setting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_profile_image"
            setCircleImage="@{firebaseUser.photoUrl.toString()}"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_nickname"
            style="@style/TextTitleBold14"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_image" />

        <TextView
            android:id="@+id/tv_user_nickname"
            style="@style/TextTitle14"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:text="@{firebaseUser.displayName}"
            app:layout_constraintBottom_toBottomOf="@id/tv_nickname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_nickname"
            tools:text="와신군" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/TextTitleBold14"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nickname" />

        <TextView
            style="@style/TextTitle14"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:text="@{firebaseUser.email}"
            app:layout_constraintBottom_toBottomOf="@id/tv_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_email"
            tools:text="wasingun@naver.com" />

        <TextView
            android:id="@+id/tv_customer_feedback"
            style="@style/TextTitleBold14"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/customer_feedback"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email" />

        <TextView
            android:id="@+id/tv_recently_viewed_post"
            style="@style/TextTitleBold14"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/recently_viewed_post"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_customer_feedback" />

        <TextView
            android:id="@+id/tv_logout"
            style="@style/TextTitleBold14"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recently_viewed_post" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>