<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.wasingun.seller_lounge.ui.editpost.EditPostViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextHeadLine"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/edit_post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_category_selector"
            style="@style/DropdownBoxStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <AutoCompleteTextView
                android:id="@+id/actv_category_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:hint="@string/category"
                android:inputType="none"
                android:textColor="@color/deep_grey"
                android:textSize="14sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/clear"
            android:hint="@string/announce_input_title"
            android:imeOptions="actionDone"
            android:lines="1"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_category_selector" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_post"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:dividerColor="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_title" />

        <EditText
            android:id="@+id/et_body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/clear"
            android:gravity="top"
            android:hint="@string/announce_input_body"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/btn_complete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_post" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_complete"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/completed"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>