<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="imageRequestListener"
            type="com.wasingun.seller_lounge.ui.postcontent.ImageRequestListener" />

        <variable
            name="documentRequestListener"
            type="com.wasingun.seller_lounge.ui.postcontent.DocumentRequestListener" />

        <variable
            name="viewModel"
            type="com.wasingun.seller_lounge.ui.postcontent.PostContentViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextHeadLine"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/post"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_category_selector"
            style="@style/DropdownBoxStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <AutoCompleteTextView
                android:id="@+id/actv_category_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:hint="@string/category"
                android:inputType="none"
                android:text="@={viewModel.postCategory}"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/clear"
            android:hint="@string/announce_input_title"
            android:maxLines="1"
            android:text="@={viewModel.postTitle}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_category_selector" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_post"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:dividerColor="@color/light_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_title" />

        <EditText
            android:id="@+id/et_body"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/clear"
            android:gravity="top"
            android:hint="@string/announce_input_body"
            android:text="@={viewModel.postBody}"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/rv_document_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_post" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_document_list"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/rv_image_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_attachment_photo"
            style="@style/AttachmentButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:onClick="@{() -> imageRequestListener.clickImageRequest()}"
            android:text="@string/attachment_photo"
            app:icon="@drawable/ic_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_image_list"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/btn_attachment_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_attachment_document"
            style="@style/AttachmentButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:onClick="@{() -> documentRequestListener.clickDocumentRequest()}"
            android:text="@string/attachment_document"
            app:icon="@drawable/ic_document"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_attachment_photo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_complete"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:onClick="@{() -> viewModel.uploadPostInfo()}"
            android:text="@string/completed"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>