<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.wasingun.seller_lounge.ui.trendcomparison.TrendComparisonViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextHeadLine"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/comparison_trend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="트랜드 비교" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_search_keyword"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="11dp"
            android:hint="@string/enter_shopping_keyword"
            app:boxStrokeColor="@color/sky_blue"
            app:errorIconDrawable="@null"
            app:helperText="@string/search_helper_text"
            app:hintTextColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_search_keyword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@={viewModel.keyword}"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_category_selector"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="149dp"
            app:boxStrokeColor="@color/sky_blue"
            app:hintTextColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_search_keyword">

            <AutoCompleteTextView
                android:id="@+id/tv_category_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:hint="카테고리"
                android:inputType="none"
                android:text="@={viewModel.category}"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_search"
            style="@style/ButtonStyle"
            android:layout_width="92dp"
            android:layout_height="60dp"
            android:layout_marginEnd="11dp"
            android:onClick="@{() -> viewModel.requestResult()}"
            android:text="검색"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="@id/til_category_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/til_category_selector" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>